# ProjetMPNA

./: .gitignore  CMakeLists.txt  README.md  makefile  plot_results.py
data/: 1138_bus.mtx  bcsstk13_2003.mtx  bcsstk29_13992.mtx  bfw398b_398.mtx  id100.mat  papier.mat  sparse20.mat  test2.mat  test20.mat  test3.mat  test4.mat  test4_2.mat
img/: lscpu.romeo
include/: eig.h  mat.h  prr.h
scripts/: bench.slurm  exec.slurm  get_eigvals.py  maqao.slurm  plot_diff.py  plot_seq.py  plot_time.py  plot_trevis.py
src/: bench.c  eig.c  main.c  mat.c  prr.c
